--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rh-ocp",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
